fix(all pages): adding title in center panel into the same div as the content to avoid spacing issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,6 +36,7 @@ h2 {
 	font-size: 40px;
 	text-decoration: underline;
 	margin-bottom: 20px;
+	text-align: center;
 }
 
 h3 {
